# betedge

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config_0.properties  docker-compose.yaml  jobs.db  pyproject.toml  supervisord.conf
bench/: __init__.py  benchmark_rust_vs_python.py
betedge_data/alternative/earnings/: client.py  earnings_client.py  models.py
betedge_data/common/: http.py  interface.py  models.py
betedge_data/historical/: config.py
betedge_data/historical/option/: __init__.py  client.py  hist_option_bulk_request.py  models.py  option_client.py
betedge_data/historical/stock/: __init__.py  client.py  hist_stock_request.py  models.py  stock_client.py
betedge_data/kafka/: __init__.py  config.py  models.py  producer.py  publisher.py  topics.py
betedge_data/live/: config.py
betedge_data/live/stock/: __init__.py  client.py  models.py
betedge_data/manager/: __init__.py  api.py  async_refactoring_phase1.md  external_models.py  job_tracker.py  models.py  service.py  utils.py
betedge_data/storage/: __init__.py  config.py  publisher.py
betedge_data/theta/: auth.py
rust_parser/: Cargo.toml  README.md  fast_parser.pyi
rust_parser/src/: filter.rs  lib.rs  parser.rs  test_data.rs  types.rs
scripts/: benchmark_rust_vs_python.py  cleanup.py  debug_json_format.py  get_tbill_rates.py  request_earnings_data.py  request_nasdaq_eod.py  request_option_data.py  request_stock_data.py  run_performance_tests.py  set_env.sh  test_bulk_quote_streaming.py  test_client.py  test_comparison.py  test_earnings.py  test_get_csv.py  test_loading.py  test_rust.py  testing.ipynb  verify_env.py
src/betedge_data/: __init__.py
src/betedge_data/alternative/earnings/: earnings_client.py  earnings_request.py
src/betedge_data/client/: client.py  job.py
src/betedge_data/common/: http.py  models.py  utils.py
src/betedge_data/data_service/alternative/earnings/: earnings_client.py
src/betedge_data/data_service/common/: http.py  interface.py  models.py  utils.py
src/betedge_data/data_service/historical/option/: hist_option_bulk_request.py  option_client.py
src/betedge_data/data_service/historical/stock/: hist_stock_request.py  stock_client.py
src/betedge_data/data_service/manager/: api.py  client.py  external_models.py  job_tracker.py  service.py  utils.py
src/betedge_data/data_service/storage/: publisher.py
src/betedge_data/data_service/theta/: client.py  config.py
src/betedge_data/historical/: config.py
src/betedge_data/historical/option/: hist_option_bulk_request.py  option_client.py
src/betedge_data/historical/stock/: hist_stock_request.py  stock_client.py
src/betedge_data/manager/: client.py  external_models.py  job_tracker.py  service.py
src/betedge_data/storage/: __init__.py  publisher.py
src/betedge_data/theta/: auth.py  config.py
tests/: conftest.py  test_api.py  test_bulk_historical_option_client.py  test_e2e_aapl_week.py  test_historical_client.py  test_historical_option_client.py  test_kafka_replay.py  test_live.py  test_performance.py  test_tier_aware_quotes.py
tests/e2e/: test_aapl_eod_year.py  test_aapl_ohlc.py  test_aapl_option_eod_month.py  test_aapl_option_week.py  test_aapl_stock_week.py  test_aapl_week.py  test_dataset_api.py  test_earnings_month.py  test_jobs_api.py  utils.py
tests/historical/option/: test_client.py
tests/integration/: test_api.py  test_earnings_client.py  test_http_client_models.py  test_minio_integration.py  test_minio_storage.py  test_option_client.py  test_stock_client.py  test_theta_processing.py
tests/unit/: test_job_tracker.py  test_option_client.py  test_service_unified.py  test_stock_client.py  test_utils.py
tests/unit/manager/: test_models.py
tests/unit/storage/: test_config.py  test_publisher.py
tests/utils/: factories.py  fixtures.py  mocks.py
