[project]
name = "betedge-data"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "httpx[http2]>=0.28.1",
    "pydantic-settings>=2.10.0",
    "ijson>=3.2.0",
    "pyarrow>=20.0.0",
    "orjson>=3.10.12",
    "minio>=7.2.0",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["betedge_data"]

[tool.hatch.metadata]
allow-direct-references=true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
]

[dependency-groups]
dev = [
    "polars>=1.31.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
    "requests>=2.32.4",
    "faker>=19.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning",
    "ignore::UserWarning"
]
markers = [
    "unit: mark test as unit test (no external dependencies)",
    "integration: mark test as integration test (requires services like MinIO)",
    "e2e: mark test as end-to-end test",
    "slow: mark test as slow running",
    "asyncio: mark test as an async test"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["betedge_data"]
omit = [
    "*/tests/*",
    "*/bench/*",
    "*/__init__.py",
    "*/test_*.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\(Protocol\\):"
]
show_missing = true
precision = 2
